# llm-rag-evaluation-fastapi

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  ruff.toml  test_queries.json
alembic/: env.py
alembic/versions/: 03b6972ab871_first_migration.py  0c8c5ef8d5e9_add_user.py  3d4dc086128a_document_relation.py  49e400e9f388_add_document_chunks.py  5fde1552ee77_update_chunk_document_relation.py  67c6f8509298_update_chunk_document_relation.py  6e139fe0efbd_document_relation.py  8076343b2c4f_add_document_relatioship.py  8e0d9430e07b_add_workspaces_table.py  b2df607963fc_add_document_relatioship.py  ea8788630195_update_chunk_document_relation.py  fb351d79dc08_add_document_chunks.py
app/: db.py  main.py
app/api/v1/: api.py
app/api/v1/endpoints/: rag.py  retrieval.py  uploads.py  users.py  workspace.py
app/core/: config.py  queue.py  s3.py  security.py  tkq.py
app/crud/: chunking.py  documents.py  users.py  workspace.py
app/db/: base.py  db.py  mixins.py
app/dependencies/: auth.py
app/models/: __init__.py  document.py  document_chunk.py  user.py  workspace.py
app/schemas/: documents.py  rag.py  retrieval.py  uploads.py  users.py  workspace.py
app/services/: bm25_service.py  chroma_service.py  chunking.py  embedding_service.py  hybrid_service.py  markdown_cleaner.py  ollama_service.py  prompt_service.py  rag_service.py  reranker_service.py  retrieval_service.py
app/workers/: ingestion.py  worker.py
evaluation/: additional_retrieval_metrics.csv  additional_retrieval_metrics_summary.csv  results.json  retrieval_metrics.csv  test_queries.json
migrations/: env.py
scripts/: compute_additional_retrieval_metrics.py  compute_ragas.py  compute_retrieval_metrics.py  create_evaluation_plots.py  run_evaluation.py
