[project]
name = "fastapi-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "pydantic-settings>=2.14.0",
    "redis>=7.4.0",
    "ruff>=0.15.12",
    "sqlalchemy[asyncio]>=2.0.0",
    "uvicorn[standard]>=0.46.0",
]
