[project]
name = "fastapi-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.1",
    "pydantic-settings>=2.14.0",
    "redis>=7.4.0",
    "ruff>=0.15.12",
    "sqlalchemy[asyncio]>=2.0.0",
    "uvicorn[standard]>=0.46.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "taskiq>=0.12.2",
    "taskiq-redis>=1.2.2",
    "taskiq-fastapi>=0.5.0",
    "python-multipart>=0.0.26",
    "aioboto3>=15.5.0",
    "minio>=7.2.20",
]

[tool.pylance]
[tool.pyright]
reportAttributeAccessIssue = false

[tool.pydantic-mypy]
init_typed = true
warn_required_dynamic_aliases = true
