[project]
name = "fastapi-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.1",
    "pydantic-settings>=2.14.0",
    "redis>=7.4.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "uvicorn[standard]>=0.46.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "aioboto3>=15.5.0",
    "arq>=0.25.0",
    "pgvector>=0.4.2",
    "sentence-transformers>=5.5.0",
    "chromadb>=1.5.9",
    "anyio>=4.13.0",
    "httpx>=0.28.1",
    "rank-bm25>=0.2.2",
    "ragas>=0.4.3",
    "datasets>=4.8.5",
    "pandas>=3.0.3",
    "tiktoken>=0.13.0",
    "beautifulsoup4>=4.14.3",
]

[tool.pylance]
[tool.pyright]
reportAttributeAccessIssue = false

[tool.pydantic-mypy]
init_typed = true
warn_required_dynamic_aliases = true

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
